loopfor.LoopCourseForest.scala.error
Erreur de compilation :
LoopCourseForest:54: error: not found: value dorite
  dorite()
  ^